Fix gallery padding to use more space, especially on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,7 +162,7 @@ h2 {
 .wrapper {
     margin: 0 auto;
     max-width: 100  rem;
-    padding: 2rem;
+    padding: 1vw;
     text-align: center;
 }
 
